# MetaMesh

./: .gitignore  Cargo.toml  Cross.toml  README.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
common/crypto/: Cargo.toml
common/crypto/src/: lib.rs
common/entropy/: Cargo.toml
common/entropy/src/: lib.rs
common/identity/: Cargo.toml
common/identity/src/: lib.rs
common/transport/: Cargo.toml
common/transport/src/: ble.rs  lib.rs
common/utils/: Cargo.toml
common/utils/src/: lib.rs
daemon/: Cargo.toml  build.rs
daemon/proto/: metamesh.proto
daemon/src/: client.rs  config.rs  gui_client.rs  lib.rs  main.rs  storage.rs
daemon/tests/: integration_tests.rs
embedded/: Cargo.toml
embedded/src/: lib.rs
mobile/: Cargo.toml
mobile/src/: lib.rs
node/: Cargo.toml
node/src/: main.rs
scripts/: build-all.sh  build-single.sh  clean.sh  format.sh  install-daemon-macos.sh  install-daemon-windows.ps1  install-daemon.sh
