[workspace]
members = [
    "common/crypto",
    "common/identity", 
    "common/utils",
    "common/entropy",
    "common/transport",
    "daemon",
    "cli",
    "mobile",
    "embedded",
    "node"
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# Crypto dependencies
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
blake3 = "1.5"

# Identity dependencies
fake = "2.9"
getrandom = "0.2"

# Transport dependencies
btleplug = "0.11"
bitflags = "2.4"

# Utility dependencies
base64 = "0.22"
hex = "0.4"
rand = "0.8"

[workspace.metadata.cross]
# Cross-compilation configuration
[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
dockerfile = "cross/Dockerfile.aarch64-unknown-linux-gnu"

[workspace.metadata.cross.target.armv7-unknown-linux-gnueabihf] 
dockerfile = "cross/Dockerfile.armv7-unknown-linux-gnueabihf"

[workspace.metadata.cross.target.aarch64-linux-android]
dockerfile = "cross/Dockerfile.aarch64-linux-android"

# Build profiles
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true