[workspace]
members = [
    "common/crypto",
    "common/identity", 
    "common/utils",
    "common/entropy",
    "common/transport",
    "daemon",
    "cli",
    "mobile",
    "embedded",
    "node"
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# Crypto dependencies
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
blake3 = { version = "1.5", default-features = false }

# Identity dependencies
fake = "2.9"
getrandom = "0.2"

# Transport dependencies
btleplug = "0.11"
bitflags = { version = "2.4", features = ["serde"] }

# Utility dependencies
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
hex = "0.4"
rand = "0.8"

# Embedded dependencies
heapless = "0.8"

# Build profiles
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true