[package]
name = "metamesh-daemon"
version = "0.1.0"
edition = "2021"
description = "MetaMesh gRPC daemon service"

[[bin]]
name = "metamesh-daemon"
path = "src/main.rs"

[[bin]]
name = "metamesh-client"
path = "src/client.rs"

[dependencies]
# Core dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }

# gRPC dependencies
tonic = "0.10"
prost = "0.12"

# MetaMesh dependencies
metamesh-identity = { path = "../common/identity" }
metamesh-transport = { path = "../common/transport" }

# Crypto dependencies
aes-gcm = "0.10"
sha2 = "0.10"
rand = { workspace = true }
hex = { workspace = true }

# Serialization
postcard = { version = "1.0", features = ["alloc"] }
serde_json = "1.0"
toml = "0.8"

# Storage
rusqlite = { version = "0.30", features = ["bundled"] }

# System
dirs = "5.0"

[build-dependencies]
tonic-build = "0.10"