[package]
name = "metamesh-embedded"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { workspace = true }
blake3 = { workspace = true }
heapless = { workspace = true }
nb = "1.0"
embedded-hal = "1.0"

# No std dependencies only
[dependencies.getrandom]
version = "0.2"
default-features = false
features = ["custom"]