[package]
name = "metamesh-entropy"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1.5"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"

[features]
default = []
embedded = []