[package]
name = "metamesh-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bitflags = { version = "2.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
btleplug = "0.11"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[features]
default = ["ble"]
ble = []
lora = []
wifi-direct = []